<resources>
    <string name="app_name">Stock Hawk</string>

    <string name="pref_stocks_initialized_key" translatable="false">initialized</string>

    <string name="pref_stocks_key">stocks</string>


    <string name="pref_display_mode_key" translatable="false">displayMode</string>
    <string name="pref_display_mode_default" translatable="false">@string/pref_display_mode_percentage_key</string>

    <string name="pref_display_mode_absolute_key" translatable="false">absolute</string>
    <string name="pref_display_mode_percentage_key" translatable="false">percentage</string>

    <string name="default_stocks_yahoo" translatable="false">YHOO</string>
    <string name="default_stocks_apple" translatable="false">AAPL</string>
    <string name="default_stocks_microsoft" translatable="false">MSFT</string>
    <string name="default_stocks_facebook" translatable="false">FB</string>


    <string name="action_change_units">@string/pref_display_mode_key</string>


    <string name="dialog_title">Add Stock</string>
    <string name="dialog_hint">Symbol (e.g. GOOG)</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_add">Add</string>

    <string name="error_no_network">No network connectivity! Will load stock cursor when the network is available.</string>
    <string name="error_no_stocks">No stocks added! Hit the floating action button to add one.</string>

    <string name="toast_stock_added_no_connectivity">Symbol %s added. Will refresh when network available.</string>
    <string name="toast_no_connectivity">Will refresh when network available.</string>
    <string name="add_new_stock_button">add new stock button</string>
    <string name="appwidget_text">EXAM</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_test_text_55" translatable="false">515.58</string>
    <string name="widget_stock_name">stock name</string>
    <string name="stock_end_date_may_2017">May 2017</string>
    <string name="stock_mid_date_may_2016">May 2016</string>
    <string name="stock_start_may_2015">May 2015</string>
    <string name="stockToCheck" translatable="false">stockToCheck</string>
    <string name="stockSymbol" translatable="false">stockSymbol</string>
    <string name="stockHistory" translatable="false">stockHistory</string>
    <string name="comma" translatable="false">,</string>
    <string name="newLine" translatable="false">\n</string>
    <string name="StockDialogFragment" translatable="false">StockDialogFragment</string>
    <string name="unfound_stock_msg">The stock symbol you entered does not exist, please try another</string>
    <string name="stock_hist_label">Stock history for:&#160;</string>
    <string name="stock_price_in_Dollars">stock price in Dollars</string>
    <string name="AAPL" translatable="false">AAPL</string>
    <string name="_55" translatable="false">55</string>
    <string name="plus" translatable="false">+</string>
    <string name="plusDollar" translatable="false">+$</string>

</resources>
