<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:id="@+id/stock_widget_item"
    android:orientation="vertical">

        <TextView
            android:id="@+id/appwidget_stock_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/widget_stock_name"
            android:gravity="center"
            android:text="@string/appwidget_text"
            android:textColor="@color/white_text"
            android:textSize="@dimen/widget_name_text_size_18sp"
            android:paddingStart="@dimen/widget_margin_8dp"
            android:paddingEnd="@dimen/widget_margin_8dp"
            android:textStyle="bold|italic"
            tools:text="AAPL" />

        <TextView
            android:id="@+id/appwidget_stock_price"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/white_text"
            android:padding="@dimen/widget_margin_8dp"
            android:textSize="@dimen/widget_price_text_size_14sp"
            tools:text="@string/widget_test_text_55"
            android:drawableStart="@drawable/ic_dollar"
           />


</LinearLayout>