<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.udacity.stockhawk.ui.StockHistoryActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:layout_marginTop="@dimen/padding_16dp"
        android:layout_marginBottom="@dimen/padding_16dp"
        android:id="@+id/txt_stock_name"
        android:textSize="@dimen/_24sp"
        android:gravity="center"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stock_start_may_2015"
            android:paddingStart="@dimen/padding_16dp"
            android:paddingEnd="@dimen/_0dp"
            android:layout_weight="1"
            android:background="@color/chartBackgroundColour"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stock_mid_date_may_2016"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#000000"
            android:background="@color/chartBackgroundColour"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stock_end_date_may_2017"
            android:layout_weight="1"
            android:gravity="end"
            android:paddingStart="@dimen/_0dp"
            android:paddingEnd="@dimen/padding_16dp"
            android:textColor="#000000"
            android:background="@color/chartBackgroundColour"/>


    </LinearLayout>

    <com.github.mikephil.charting.charts.BarChart
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:paddingTop="@dimen/padding_16dp"
        android:id="@+id/bar_chart"
        android:layout_weight="6"
        android:layout_marginBottom="@dimen/padding_16dp"
        android:scrollbarAlwaysDrawHorizontalTrack="true" />

</LinearLayout>
